Update Font Title

--- a/festivalcreative-lps/src/css/roadshow.css
+++ b/festivalcreative-lps/src/css/roadshow.css
@@ -36,7 +36,7 @@
   background: #FFF;
 }
 #roadshow-article .mycontainer .section-title {
-  font-family: "montserat-semibold";
+  font-family: "montserat-bold";
   color: #1B4193;
   font-size: 23px;
   line-height: normal;
