--- a/festivalcreative-lps/src/scss/roadshow.scss
+++ b/festivalcreative-lps/src/scss/roadshow.scss
@@ -40,7 +40,7 @@
         border: 1px solid rgba(55, 53, 61, 0.30);
         background: #FFF;
         .section-title{
-            font-family: "montserat-semibold";
+            font-family: "montserat-bold";
             color: #1B4193;
             font-size: 23px;
             line-height: normal;
