--- a/yamaha-youth/assets/css/miss-classy.css
+++ b/yamaha-youth/assets/css/miss-classy.css
@@ -228,7 +228,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
   overflow-x: hidden;
   overflow-y: hidden;
   white-space: nowrap;
@@ -358,6 +357,31 @@
 
 #miss-classy .modal-footer {
   border: none;
+}
+
+.not-avail img{
+  width: 100%;
+  max-width: 150px;
+  margin-top: 24px;
+  margin-bottom: 12px;
+}
+
+.not-avail h1{
+  color: #F0952B;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  line-height: normal;
+  margin-bottom: 12px;
+}
+
+.not-avail p{
+  color: #F0952B;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  line-height: normal;
+  margin-bottom: 12px;
 }
 
 @media (max-width: 1200px) {
