--- a/pilihanbunda-awards/src/scss/main.scss
+++ b/pilihanbunda-awards/src/scss/main.scss
@@ -579,6 +579,9 @@ body {
         align-items: center;
         color: #d865a3;
         font-family: "DMSans-Bold", sans-serif;
+        a {
+          color: #d865a3;
+        }
         h3 {
           font-size: 23px;
           font-weight: 700;
