--- a/pilihanbunda-awards/src/scss/main.scss
+++ b/pilihanbunda-awards/src/scss/main.scss
@@ -123,6 +123,10 @@ body {
         background-color: rgb(255, 255, 255, 0.3);
       }
 
+      .nav-link {
+        padding: 0;
+      }
+
       .dropdown-item.active,
       .dropdown-item:active,
       .dropdown-item:hover {
@@ -169,12 +173,12 @@ body {
         border: solid 1px #d1d5db;
       }
       .auth-nav .dropdown-menu[data-bs-popper] {
-        left: -200px;
+        left: -210px;
         background-color: rgb(255, 255, 255, 0.8);
         backdrop-filter: blur(24px);
         border-radius: 20px;
         border: solid 1px #d1d5db;
-        top: 125%;
+        top: 160%;
         overflow-x: hidden;
         overflow-y: hidden;
         white-space: nowrap;
