Style: Update show more aggregator button top margin in mobile display

--- a/pilihanbunda-awards/src/css/main.css
+++ b/pilihanbunda-awards/src/css/main.css
@@ -556,6 +556,9 @@ body #aggregator .container .aggregator-container .show-more-btn {
     display: block;
   }
 }
+body #aggregator .container .aggregator-container .show-more-btn {
+  margin-top: 30px;
+}
 @media (min-width: 576px) {
   body #aggregator .container .aggregator-container .aggregator-card {
     --flex-items: 2; /* Variable for number of items */
